...
            ViewButton(
                isLoading: $isLoading,
                action: { viewModel.deleteAllUsers() },
                label: "Delete All"
            )
            .tint(.red)
            .accessibilityIdentifier("deleteAllUsersButton")
        }
        .padding()
    }
    
    private let columns = [
        GridItem(.flexible()),
...
